--- a/jspstudy2/WebContent/WEB-INF/action.properties
+++ b/jspstudy2/WebContent/WEB-INF/action.properties
@@ -14,3 +14,5 @@
 /model2/member/list.me=action.member.ListAction
 /model2/member/picture.me=action.member.PictureAction
 /model2/member/password.me=action.member.PasswordAction
+/model2/member/id.me=action.member.IdAction
+/model2/member/pw.me=action.member.PwAction
