--- a/jspstudy2/WebContent/WEB-INF/web.xml
+++ b/jspstudy2/WebContent/WEB-INF/web.xml
@@ -9,4 +9,13 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <!-- sitemesh관련 설정 : WEB-INF/sitemesh.xml 설정파일 필요-->
+  <filter>
+  	<filter-name>sitemesh</filter-name>
+  	<filter-class>com.opensymphony.sitemesh.webapp.SiteMeshFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>sitemesh</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
