2020 12 08 레이아웃 추가, 메일 추가, 보드 수정

--- a/jspstudy2/WebContent/WEB-INF/action.properties
+++ b/jspstudy2/WebContent/WEB-INF/action.properties
@@ -16,3 +16,6 @@
 /model2/member/password.me=action.member.PasswordAction
 /model2/member/id.me=action.member.IdAction
 /model2/member/pw.me=action.member.PwAction
+#mail
+/model2/member/mailform.me=action.member.MailFormAction
+/model2/member/mail.me=action.member.MailAction
