--- a/jspstudy2/WebContent/WEB-INF/method.properties
+++ b/jspstudy2/WebContent/WEB-INF/method.properties
@@ -8,3 +8,4 @@
 /model2/board/updateForm.do=replyForm
 /model2/board/update.do=update
 /model2/board/delete.do=delete
+/model2/board/imgupload.do=imgupload
